--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -10,6 +10,11 @@
 <body>
     <header>
         <h1>Schedule for TechCon 2024</h1>
+        <h2>Schedule for TechCon 2024</h2>
+        <h3>Schedule for TechCon 2024</h3>
+        <h4>Schedule for TechCon 2024</h4>
+        <h5>Schedule for TechCon 2024</h5>
+        <h6>Schedule for TechCon 2024</h6>
         <nav>
             <a href="about.html">About us </a>
             <a href="schedule.html">Schedule</a>
@@ -31,7 +36,7 @@
         </table>
     </main>
     <footer>
-        <P>Copyright &copy; made by Akwetey Priscilla</P>
+        <P>Copyright &copy; Made by Akwetey Priscilla</P>
     </footer>
 </body>
 
