--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -11,10 +11,13 @@
     <header>
         <h1>About TechCon 2024</h1>
         <nav>
-            <a href="about.html">About us </a>
-            <a href="schedule.html">Schedule</a>
-            <a href="register.html">Register</a>
-            <a href="contact.html">Contact</a>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href="about.html">About us </a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <main>
