--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -11,10 +11,13 @@
     <header>
         <h1>The TechCon 2024 conference website.</h1>
         <nav>
-            <a href="about.html">About us </a>
-            <a href="Schedule.html">Schedule</a>
-            <a href="register.html">Register</a>
-            <a href="contact.html">Contact</a>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href="about.html">About us </a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
