--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -10,16 +10,14 @@
 <body>
     <header>
         <h1>Schedule for TechCon 2024</h1>
-        <h2>Schedule for TechCon 2024</h2>
-        <h3>Schedule for TechCon 2024</h3>
-        <h4>Schedule for TechCon 2024</h4>
-        <h5>Schedule for TechCon 2024</h5>
-        <h6>Schedule for TechCon 2024</h6>
         <nav>
-            <a href="about.html">About us </a>
-            <a href="schedule.html">Schedule</a>
-            <a href="register.html">Register</a>
-            <a href="contact.html">Contact</a>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href="about.html">About us </a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <main>
