--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -12,7 +12,6 @@
         <h1>Schedule for TechCon 2024</h1>
         <nav>
             <ul>
-                <li><a href=""></a></li>
                 <li><a href="about.html">About us </a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
@@ -34,7 +33,7 @@
         </table>
     </main>
     <footer>
-        <P>Copyright &copy; Made by Akwetey Priscilla</P>
+        <P>copyright &copy; Made by Akwetey Priscilla</P>
     </footer>
 </body>
 
