adding register.html

--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -29,10 +29,12 @@
 
             <label for="terms"></label>
             <input type="checkbox" id="terms" name="terms">
-            
+
             <button type="submit">Submit</button>
         </form>
-
     </main>
+    <footer>
+        <P>copyright &copy; Made by Akwetey Priscilla</P>
+    </footer>
 </body>
 </html>
