--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -12,7 +12,7 @@
         <h1>The TechCon 2024 conference website.</h1>
         <nav>
             <ul>
-                <li><a href="about.html">About us </a></li>
+                <li><a href="about.html">About  </a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
