--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -10,14 +10,14 @@
         <h1>Register for TechCon 2024</h1>
         <nav>
             <ul>
-                <li><a href="about.html">About us </a></li>
+                <li><a href="about.html">About </a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <form action="">
+        <form action="" method="post">
             <label for="fullname" >Fullname</label>
             <input type="Fullname" name="fullname" placeholder="fullname">
 
