--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -12,7 +12,7 @@
         <h1>Schedule for TechCon 2024</h1>
         <nav>
             <ul>
-                <li><a href="about.html">About us </a></li>
+                <li><a href="about.html">About  </a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
