--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -12,6 +12,8 @@
         <h1>About TechCon 2024</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
