--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -10,6 +10,7 @@
         <h1>Register for TechCon 2024</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About </a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -21,13 +22,13 @@
             <label for="fullname" >Fullname</label>
             <input type="Fullname" name="fullname" placeholder="fullname">
 
-            <label for="Email"></label>
+            <label for="Email"Email>Email</label>
             <input type="Email" name="email" placeholder="example@gmail.com">
 
             <label for="Passwird">Password</label>
             <input type="password" name="password" placeholder="enter password">
 
-            <label for="terms"></label>
+            <label for="terms">Terms and condition</label>
             <input type="checkbox" id="terms" name="terms">
 
             <button type="submit">Submit</button>
