--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -25,7 +25,7 @@
             </div>
 
            <div>
-            <label for="Email" Email>Email</label>
+            <label for="Email" Email>Email address</label>
             <input type="Email" name="email" placeholder="example@gmail.com" required>
            </div>
 
@@ -35,7 +35,7 @@
           </div> 
     
           <div>
-            <label for="Passwird">confirm Password</label>
+            <label for="Passwird">Confirm Password</label>
             <input type="confrim password" name="confirm password" placeholder="enter password" required>
           </div>
            
