--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -21,7 +21,7 @@
         <form action="/submit registration " method="post">
             <div>
                 <label for="fullname">Fullname</label>
-                <input type="Fullname" name="fullname" placeholder="fullname">
+                <input type="Fullname" name="fullname" id="">
             </div>
 
            <div>
@@ -30,18 +30,18 @@
            </div>
 
           <div>
-            <label for="Passwird">Password</label>
-            <input type="password" name="password" placeholder="enter password" required>
+            <label for="Password">Password</label>
+            <input type="password" id="password"  >
           </div> 
     
           <div>
-            <label for="Passwird">Confirm Password</label>
-            <input type="confrim password" name="confirm password" placeholder="enter password" required>
+            <label for="Password">Confirm Password</label>
+            <input id="Password" type="confrim password" name="confirm password"  >
           </div>
            
           <div>
             <label for="terms">Terms and condition</label>
-            <input type="checkbox" id="terms" name="terms" required>
+            <input type="checkbox" id="terms" name="terms" >
           </div>
 
             <button type="submit">Submit</button>
